--- a/BirdAudioApp/app/src/main/AndroidManifest.xml
+++ b/BirdAudioApp/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         tools:targetApi="31">
         <service android:name="com.amap.api.location.APSService"/>
         <!--设置高德Key-->
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="c013f87539f7db9b81a1ee874b3539ff"/>
+        <meta-data android:name="com.amap.api.v2.apikey" android:value=""/>
 
         <activity
             android:name=".SearchResultActivity"
